@@ -273,12 +273,13 @@ sjt.frq <- function(data,
 
   # check if string vectors should be removed
   if (ignore.strings) {
-    # check if we have data frame with several variables
-    if (is.data.frame(data)) {
-      # remove string variables
-      data <- data[, !sapply(data, is.character)]
-    } else if (is.character(data)) {
-      stop("`data` is a single string vector, where string vectors should be removed. No data to compute frequency table left. See argument `ignore.strings` for details.", call. = FALSE)
+
+    # # remove string variables from data frame
+    if (is.data.frame(data))
+      data <- data[, !sapply(data, is.character), drop = FALSE]
+
+    if (sjmisc::is_empty(data) || is.character(data)) {
+      stop("`data` only contains string vectors, where string vectors should be removed. No data to compute frequency table left. See argument `ignore.strings` for details.", call. = FALSE)
     }
   }
 
@@ -373,6 +374,16 @@ sjt.frq <- function(data,
 
   # start iterating all variables
   for (cnt in seq_len(nvar)) {
+    # check if we have a string-vector
+    if (is.character(data[[cnt]])) {
+      # convert string to numeric
+      orivar <- varia <- as.numeric(as.factor(data[[cnt]]))
+      # here we have numeric or factor variables
+    } else {
+      # convert to numeric
+      orivar <- varia <- sjmisc::to_value(data[[cnt]], keep.labels = F)
+    }
+
     # check for length of unique values and skip if too long
     if (!is.null(auto.group) &&
         !is.character(data[[cnt]]) &&
@@ -387,31 +398,21 @@ sjt.frq <- function(data,
       val.lab <-
         sjmisc::group_labels(
           sjmisc::to_value(data[[cnt]], keep.labels = F),
-          size = "auto",
-          n = auto.group
+          groupsize = "auto",
+          groupcount = auto.group
         )
 
       # group variable
       data[[cnt]] <-
         sjmisc::group_var(
           sjmisc::to_value(data[[cnt]], keep.labels = F),
-          size = "auto",
+          groupsize = "auto",
           as.num = TRUE,
-          n = auto.group
+          groupcount = auto.group
         )
 
       # set labels
       data[[cnt]] <- sjlabelled::set_labels(data[[cnt]], labels = val.lab)
-    }
-
-    # check if we have a string-vector
-    if (is.character(data[[cnt]])) {
-      # convert string to numeric
-      orivar <- varia <- as.numeric(as.factor(data[[cnt]]))
-      # here we have numeric or factor variables
-    } else {
-      # convert to numeric
-      orivar <- varia <- sjmisc::to_value(data[[cnt]], keep.labels = F)
     }
 
     # retrieve summary
